# Sakura-Chan

./: README.md  STREAMS.db  main.py  prefix.db  pyproject.toml  svinvite.txt
assets/: answers.txt  passwords.txt  websites.txt
cogs/: customimage.py  dagpi cogs.py  fun.py  memes.py  moderation.py  mp3.py  music.py  screenshot.py  soundboard.py  utils.py  zane.py
utils/: aioreq.py  request.py
