[tool.poetry]
name = "sakura-chan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
youtube-dl = "^2021.2.22"
discord = "^1.0.1"
praw = "^7.1.2"
asyncdagpi = "^3.2.2"
DiscordUtils = "^1.2.6"
PyNaCl = "^1.4.0"
PyAudio = "^0.2.11"
"discord.py" = "^1.6.0"
flask = "^1.1.2"
google = "^3.0.0"
upsidedown = "^0.4"
aiosqlite = "^0.16.1"
aiozaneapi = "^1.6"
aiohttp = "^3.7.3"
asyncpraw = "^7.1.1"
youtube-dl2 = "^2.0"
googletrans = "^3.0.0"
opencv-python = "^4.5.1"
qrcode = "^6.1"
gtts = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
